--- a/dosedirector/manifest.plist
+++ b/dosedirector/manifest.plist
@@ -11,19 +11,19 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://dev.kenners.org/apps/dosedirector/dosedirector.ipa</string>
+					<string>https://dev.kenners.org/dosedirector/dosedirector.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://dev.kenners.org/apps/dosedirector/image.57x57.png</string>
+					<string>https://dev.kenners.org/dosedirector/image.57x57.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://dev.kenners.org/apps/dosedirector/image.512x512.png</string>
+					<string>https://dev.kenners.org/dosedirector/image.512x512.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
